Arithmetic test